[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Camera.gd" type="Script" id=2]
[ext_resource path="res://utility/statemachine/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://Player/States/StateIdle.gd" type="Script" id=4]
[ext_resource path="res://Player/States/StateRun.gd" type="Script" id=5]
[ext_resource path="res://Player/States/StateWalk.gd" type="Script" id=6]
[ext_resource path="res://Player/States/StateJump.gd" type="Script" id=7]

[sub_resource type="CapsuleShape" id=1]
radius = 0.3
height = 1.3

[sub_resource type="CapsuleShape" id=2]
radius = 0.3
height = 0.28

[sub_resource type="CapsuleMesh" id=3]
radius = 0.3
mid_height = 1.3

[node name="Player" type="KinematicBody"]
input_ray_pickable = false
collision_layer = 2
script = ExtResource( 1 )

[node name="StandShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.95, 0 )
visible = false
shape = SubResource( 1 )

[node name="CrouchShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.44, 0 )
visible = false
shape = SubResource( 2 )
disabled = true

[node name="Body" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Body"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.95, 0 )
layers = 2
mesh = SubResource( 3 )
material/0 = null

[node name="Camera" type="Spatial" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.59933, 0 )

[node name="Camera" type="Camera" parent="Body/Camera"]
cull_mask = 3
script = ExtResource( 2 )

[node name="RightRay" type="RayCast" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
cast_to = Vector3( 0.5, 0, 0 )

[node name="LeftRay" type="RayCast" parent="Body"]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0.5, 0 )
cast_to = Vector3( 0.5, 0, 0 )

[node name="FrontRay" type="RayCast" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.9, -0.4 )
cast_to = Vector3( 0, -1.9, 0 )

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.17
one_shot = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )
smPath = NodePath("..")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
smPath = NodePath("..")

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource( 5 )
smPath = NodePath("..")

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 7 )
smPath = NodePath("..")
